Fixed scaling on mobile

--- a/style.css
+++ b/style.css
@@ -72,7 +72,16 @@ body
     margin: auto;
 }
 
-@media only screen and (max-width: 640px)
+@media screen and (orientation: portrait)
+{
+    .menu > a
+    {
+        font-size: 50px;
+    }
+}
+
+
+@media screen and (max-width: 640px)
 {
     .menu
     {
